--- a/lesson05/style.css
+++ b/lesson05/style.css
@@ -1,39 +1,85 @@
-*{
+* {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
-
-
 }
 body {
-    box-sizing: content-box;
-    box-sizing: border-box;
-    width: 1523px;
     margin: 0;
-    padding: 0;
+    padding: 0 40px;
 }
-.text__title {
-    display: inline;
-    padding-left: 20px;
-    padding-right: 24px;
+
+.header {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    background: rgb(255, 255, 255);
+    
+}
+    .header__title {
+        display: flex;
+        flex-direction: row;
+        padding-top: 30px;
+    }
+
+    .header__svg {
+        padding-top: 15px;
+        padding-right: 50px;
+    }
+
+
+.main-content__background {
+    opacity: 0.6;
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+    z-index: -1;
+}
+
+    .main-content__navigation-wrapper {
+        width: 720px;
+        
+    }
+
+    .main-content__navigation {
+        position: fixed;
+        width: 720px;
+        height: 100%;
+    }
+
+    .navigation {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+.article__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    flex-wrap: wrap;
+    padding-left: 400px;
+    padding-top: 100px;
+}
+
+    .article__chapetr {
+        margin-bottom: 50px;
+    }
+
+.title__text {
     font-size: 20px;
-    
-
-}
-
-.svg__title {
-    position: relative;
-    left: 1290px;
-}
-
-main {
-    padding-left: 44px;
     padding-right: 24px;
 }
 
-.h3, p {
+.text-1 {
+    font-weight: 900;
     font-size: 36px;
-    text-align: justify;
-    
+    line-height: 42px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+}
+
+.chapter__title, .chapter__description{
+    font-size: 36px;
+    line-height: 48px;  
 }
 
 .underline {
@@ -47,4 +93,5 @@ main {
 .code-decoration {
     background-color: rgb(212, 205, 205);
 }
+
 
